# mentok

branches/carlalex_initial_checkin_vendortag/mentok/: README
htdocs/: index.html
mentok/: LICENSE  README
mentok/build-harness/: CHANGELOG
mentok/build-harness/cgi/: markbuild.cgi
mentok/build-harness/cgi/FORMS/: BURNCD_FORM  GROUP_DISP  PUSH_FOOTER
mentok/build-harness/config/: Defaults.pl
mentok/build-harness/scripts/: build.pm  buildall.pl  runbuild.pl  vcs.pm
mentok/build3/: LICENSE.html  buildsystem3.html  defines.mk  index.html  rules.mk
mentok/build3-sample-component-tree/sample-srcdir/sample-components/: imports.mk
mentok/build3-sample-component-tree/sample-srcdir/sample-nativecode/: Makefile  foo.l  hello.c  say-hi.c
mentok/build3-sample-component-tree/sample-srcdir/sample-package/: Makefile
mentok/build3-sample-component-tree/src/fancy-packaging-sample/: pkgfile1
mentok/build3/autoconf/: defines-autoconf.mk  rules-autoconf.mk
mentok/build3/autoconf/autoconf/: acconfig.h  config.mk  configure.in
mentok/build3/base/: base.html  defines-base-Darwin.mk  defines-base-FreeBSD.mk  defines-base-Linux.mk  defines-base-SunOS.mk  defines-base-Windows.mk  defines-base.mk  rules-base.mk
mentok/build3/bootstrap/: Makefile
mentok/build3/bootstrap/build3-config/: build3-bootstrap.mk  defines.mk
mentok/build3/checkenv/: checkenv.html  defines-checkenv.mk  rules-checkenv.mk
mentok/build3/codegen/: defines-codegen-Linux.mk  defines-codegen-Windows.mk  kvptemplate.pl  rules-codegen.mk
mentok/build3/component/: component.html  defines-component.mk  rules-component.mk
mentok/build3/component/group/: defines-group-component.mk
mentok/build3/config/: config.html  defines-config.mk  rules-config.mk
mentok/build3/doc/: rules-doc.mk
mentok/build3/flex/: rules-flex.mk
mentok/build3/javacode/: defines-javacode-Linux.mk  defines-javacode.mk  javacode.html  rules-javacode.mk
mentok/build3/nativecode/: defines-nativecode-Darwin.mk  defines-nativecode-FreeBSD.mk  defines-nativecode-Linux-2.4-i686.mk  defines-nativecode-Linux.mk  defines-nativecode-SunOS.mk  defines-nativecode.mk  nativecode.html  rules-nativecode.mk
mentok/build3/nativecode/toolchains/: defines.mk  rules.mk
mentok/build3/packaging/: defines-packaging-Linux-i686.mk  defines-packaging-Linux-x86_64.mk  defines-packaging.mk  packaging.html  rules-packaging.mk
mentok/build3/perforce/: defines-perforce-Linux.mk  defines-perforce.mk  rules-perforce.mk
mentok/build3/pythoncode/: pyc_exec_stub  rules-pythoncode.mk
mentok/build3/recursion/: defines-recursion.mk
mentok/build3/release-engineering/: release-engineering.html  rules-release-engineering.mk
mentok/build3/util/: plat.pl  rpmgpgsigner.sh  status-msg.pl
mentok/build3/xmlmd/: defines-xmlmd.mk  rules-xmlmd.mk  xmlmd.html
mentok/samples/project/: Makefile
mentok/samples/project-1/build3-config/: bootstrap.mk  defines.mk
mentok/samples/project-1/src/: Makefile
tags/Build3-SymantecMerge-2006-05-09/mentok/build3/: defines.mk  rules.mk
tags/Everything-SVNMigrationPt-2006-10-05/mentok/build-harness/: README  TODO
tags/Mentok-3-5-2005-09-10-exportpt/htdocs/: mentok-style.css
tags/Mentok-3-5-2005-09-10-exportpt/mentok/build3/: index.html
tags/Mentok-3-5-2005-09-10-exportpt/mentok/src/: Makefile
tags/carlalex_initial_checkin_releasetag/mentok/build3/: defines.mk  rules.mk
tags/mentok-trunk-snapshot20061010-rtm/mentok/: README
tags/release_0_1_prebranch/mentok/build-harness/: LICENSE.html
trunk/htdocs/: index.html
trunk/htdocs/build3-doc-snapshot/doc/: doc.html
trunk/mentok/build-harness/cgi/: burncd.cgi
trunk/mentok/build-harness/config/: EXAMPLE.pl
trunk/mentok/build-harness/scripts/: build.pm  buildall.pl  cvs.pm  perforce.pm  vcs.pm
trunk/mentok/build3/: defines.mk  rules.mk
trunk/mentok/build3-sample-component-tree/: imports.mk
trunk/mentok/build3/aliencode/: rules-aliencode.mk
trunk/mentok/build3/autoconf/: rules-autoconf.mk
trunk/mentok/build3/base/: base.html  defines-base-Darwin.mk  defines-base-FreeBSD.mk  defines-base-Linux.mk  defines-base-SunOS.mk  defines-base-Windows.mk  defines-base-compat.mk  defines-base.mk  rules-base.mk
trunk/mentok/build3/bootstrap/: Makefile
trunk/mentok/build3/util/: plat.pl
trunk/mentok/src/: Makefile
(+273 files in other folders)
